force-app/main/default/objects/Funding_Opportunity__c/Funding_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Grants available within the EERE Small Business Program</description>
    <label>Funding Opportunity</label>
    <nameField>
        <displayFormat>DE-FOA-{00000000}</displayFormat>
        <label>Funding Opportunity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>