force-app/main/default/objects/Funding_Opportunity__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the opportunity is open to applications.</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>