force-app/main/default/objects/Funding_Opportunity__c/fields/FOA_Number__c.field-meta.xml
<CustomField>
    <fullName>FOA_Number__c</fullName>
    <description>FOA Number for available funding opportunities</description>
    <displayFormat>DE-FOA-{00000000}</displayFormat>
    <label>FOA Number</label>
    <type>AutoNumber</type>
</CustomField>