force-app/main/default/objects/Funding_Opportunity__c/fields/Minimum_Budget_Share__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Budget_Share__c</fullName>
    <description>Minimum budget share allowed for the project.</description>
    <inlineHelpText>The minimum percentage of the budget that a company must be willing to put in as their share.</inlineHelpText>
    <label>Minimum Budget Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>