force-app/main/default/objects/Funding_Opportunity__c/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>NAICS code associated with the grant</description>
    <label>NAICS Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NAICS_Codes</valueSetName>
    </valueSet>
</CustomField>