force-app/main/default/objects/Funding_Opportunity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of funding opportunity</description>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>