force-app/main/default/objects/Funding_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Closed__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>NAICS_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Records</label>
</ListView>