force-app/main/default/objects/Funding_Opportunity__c/listViews/Northeast_Region.listView-meta.xml
<ListView>
    <fullName>Northeast_Region</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Closed__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>State__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Northeast</value>
    </filters>
    <label>Northeast Region</label>
</ListView>